--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
+    "class-variance-authority": "^0.7.0",
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
